--- a/courses.html
+++ b/courses.html
@@ -65,18 +65,18 @@
                 <div class="wrapper">
                   <div class="cols">
                     <ul class="list3">
-                      <li><a href="#">Sed ut perspiiatis unde omnis iste</a></li>
-                      <li><a href="#">Natus error sit volupatem accusantiu</a></li>
-                      <li><a href="#">Doloremque laudatium, totam rem</a></li>
-                      <li><a href="#">Aperiam, eaqueipsa quae ahillo</a></li>
+                      <li><a href="#">LINUX</a></li>
+                      <li><a href="#">DEVOPS</a></li>
+                      <li><a href="#">MONITORING TOOLS</a></li>
+                      <li><a href="#">JOB SUPPORT</a></li>
                     </ul>
                   </div>
                   <div class="cols pad_left2">
                     <ul class="list3">
-                      <li><a href="#">Nemo enim ipsam volptatem quia</a></li>
-                      <li><a href="#">Voluptas sit aspernatur aut odit autgit</a></li>
-                      <li><a href="#">Sed quia consequuntur magni</a></li>
-                      <li><a href="#">Dolores eos qui ratione voluptatem</a></li>
+                      <li><a href="#">REAL TIME PROJECTS</a></li>
+                      <li><a href="#">ONE-TO-ONE MOCK INTERVIEWS</a></li>
+                      <li><a href="#">INDUSTRY EXPERTS</a></li>
+                      <li><a href="#">ADVANCED CONCEPTS</a></li>
                     </ul>
                   </div>
                 </div>
@@ -97,9 +97,8 @@
             <a href="#" class="button"><span><span>Read More</span></span></a>
             <div class="pad_left1">
               <h2 class="marg_top1">Evening Courses</h2>
-              <p><strong>Nemo ipsam voluptatem</strong><br>
-                Quia voluptas sit aspernatur aut odit aut fugit, seduia consequuntur magni dolores eos qui ratione. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non.<br>
-                numquam eius modi tempora incidunt ut labore et dolore magnam.</p>
+              <p><strong>Feasible Timings</strong><br>
+                Upskill any time.</p>
             </div>
             <a href="#" class="button"><span><span>Read More</span></span></a> </article>
         </div>
@@ -135,10 +134,10 @@
               <article class="col_3 pad_left2">
                 <h3>Why Us:</h3>
                 <ul class="list2">
-                  <li><a href="#">Lorem ipsum dolor </a></li>
-                  <li><a href="#">Aonsect adipisic</a></li>
-                  <li><a href="#">Eiusmjkod tempor </a></li>
-                  <li><a href="#">Incididunt ut labore </a></li>
+                  <li><a href="#">Sample text here</a></li>
+                  <li><a href="#">Another example link</a></li>
+                  <li><a href="#">Placeholder content</a></li>
+                  <li><a href="#">Work-related text</a></li>       
                 </ul>
               </article>
               <article class="col_4 pad_left2">
@@ -155,7 +154,7 @@
             </div>
             <div class="wrapper">
               <article class="call"> <span class="call1">Call Us Now: </span><span class="call2">1-800-567-8934</span> </article>
-              <article class="col_4 pad_left2">Copyright &copy; <a href="#">Domain Name</a> All Rights Reserved<br>
+              <article class="col_4 pad_left2">Copyright &copy; <a href="#">Devopsfriends</a> All Rights Reserved<br>
               </a></article>
             </div>
           </div>
