--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Learn Center</title>
+<title>DevopsFriends</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/reset.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/layout.css" type="text/css" media="all">
@@ -27,7 +27,7 @@
             <li><a href="index.html">About</a></li>
             <li><a href="courses.html">Courses</a></li>
             <li><a href="programs.html">Programs</a></li>
-            <li><a href="teachers.html">Teachers</a></li>
+            <li><a href="teachers.html">Faculty</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li class="end"><a href="contacts.html">Contacts</a></li>
           </ul>
@@ -72,9 +72,9 @@
         <div class="wrapper">
           <article class="col1">
             <div class="pad_left1">
-              <h2>Welcome to Our Center</h2>
+              <h2>Welcome to Devops Friends Software Training</h2>
               <p class="font2">DevOpsFriends is one of best Software Institution in world </p>
-              <p><strong>DevOpsFriends Template</strong> is optimized for 1024X768 screen resolution. It’s also XHTML &amp; CSS valid. This website template has several pages: <a href="courses.html">Courses</a>, <a href="programs.html">Programs</a>, <a href="teachers.html">Teachers</a>, <a href="admissions.html">Admissions</a>, <a href="contacts.html">Contacts</a> (note that contact us form – doesn’t work).</p>
+              <p><strong>DevOpsFriends Template</strong> You can navigate serviral pages <a href="courses.html">Courses</a>, <a href="programs.html">Programs</a>, <a href="teachers.html">Teachers</a>, <a href="admissions.html">Admissions</a>, <a href="contacts.html">Contacts</a> (note that contact us form – doesn’t work).</p>
             </div>
             <a href="#" class="button"><span><span>Read More</span></span></a>
             <div class="pad_left1">
@@ -101,13 +101,13 @@
             <div class="pad_left1">
               <h2>Latest News</h2>
             </div>
-            <div class="wrapper"> <span class="date">27</span>
-              <p class="pad_top2"><a href="#">April, 2011</a><br>
-                Sed utirspiciatis unde omnis iste natus error sit...</p>
+            <div class="wrapper"> <span class="date">03</span>
+              <p class="pad_top2"><a href="#">JAN, 2025</a><br>
+                Best Trainers...</p>
             </div>
             <div class="wrapper"> <span class="date">10</span>
               <p class="pad_top2"><a href="#">Jan, 2025</a><br>
-                Accusing pleasure and praising pain...</p>
+                Fresh Batches starting soon</p>
             </div>
             <div class="pad_top2"> <a href="#" class="button"><span><span>Read More</span></span></a> </div>
           </article>
