--- a/programs.html
+++ b/programs.html
@@ -120,10 +120,10 @@
               <article class="col_3 pad_left2">
                 <h3>Why Us:</h3>
                 <ul class="list2">
-                  <li><a href="#">Lorem ipsum dolor </a></li>
-                  <li><a href="#">Aonsect adipisic</a></li>
-                  <li><a href="#">Eiusmjkod tempor </a></li>
-                  <li><a href="#">Incididunt ut labore </a></li>
+                  <li><a href="#">Sample text here</a></li>
+                  <li><a href="#">Another example link</a></li>
+                  <li><a href="#">Placeholder content</a></li>
+                  <li><a href="#">Work-related text</a></li>       
                 </ul>
               </article>
               <article class="col_4 pad_left2">
