--- a/admissions.html
+++ b/admissions.html
@@ -27,7 +27,7 @@
             <li><a href="index.html">About</a></li>
             <li><a href="courses.html">Courses</a></li>
             <li><a href="programs.html">Programs</a></li>
-            <li><a href="teachers.html">Teachers</a></li>
+            <li><a href="teachers.html">Faculty</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li class="end"><a href="contacts.html">Contacts</a></li>
           </ul>
@@ -38,7 +38,7 @@
         </ul>
       </div>
       <div class="wrapper">
-        <h1><a href="index.html" id="logo">Learn Center</a></h1>
+        <h1><a href="index.html" id="logo">Devopsfriends</a></h1>
       </div>
       <div id="slogan"> We Will Open The World<span>of knowledge for you!</span> </div>
     </header>
