--- a/index.html
+++ b/index.html
@@ -449,19 +449,19 @@
             <ul>
               <li>
                 <h6>Phone Number</h6>
-                <span>010-020-0340</span>
+                <span>9591256841</span>
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>info@meeting.edu</span>
+                <span>info@devopsfriends.com</span>
               </li>
               <li>
-                <h6>Street Address</h6>
-                <span>Rio de Janeiro - RJ, 22795-008, Brazil</span>
+                <h6>Jaya Nagar</h6>
+                <span>Bangalore</span>
               </li>
               <li>
                 <h6>Website URL</h6>
-                <span>www.meeting.edu</span>
+                <span>www.devopsfriends.com</span>
               </li>
             </ul>
           </div>
@@ -469,7 +469,7 @@
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
+      <p>Copyright © 2025 DevOps Friends. All Rights Reserved. 
           <br>Design: <a href="https://devopsfriends.com" target="_parent" title="DevOps Friends">DevOps Friends</a></p>
     </div>
   </section>
