--- a/courses.html
+++ b/courses.html
@@ -83,7 +83,7 @@
 
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
-    <img src="assets/images/bg02.jpg" alt="Course Banner" id="bg-image" />
+    <img src="assets/images/background.jpg" alt="Course Banner" id="bg-image" />
       </video>
 
       <div class="video-overlay header-text">
