--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
-    <img src="assets/images/pagebg.jpg" alt="Course Banner" id="bg-image" />
+    <img src="assets/images/.jpg" alt="Course Banner" id="bg-image" />
       </video>
 
       <div class="video-overlay header-text">
